--- a/src/components/ResizableCell/styles.css
+++ b/src/components/ResizableCell/styles.css
@@ -1,6 +1,6 @@
 .react-resizable-handle {
   display: block;
-  background-color: hsl(0, 0%, 15%);
+  background-color: #303030;
   background-repeat: no-repeat;
   background-position: 50%;
 }
