--- a/src/components/MarkdownEditor/resizerReset.css
+++ b/src/components/MarkdownEditor/resizerReset.css
@@ -43,7 +43,7 @@
 }
 
 .text-editor .w-md-editor-toolbar li button {
-  color: #d4d4d4;
+  color: #8db8d1;
 }
 
 .text-editor .w-md-editor-content {
